# uzumaki

./: .gitignore  .oxlintrc.json  .prettierrc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  out.txt  out2.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  init.rs  main.rs
crates/cli/src/standalone/: boot.rs
crates/cli/template/: uzumaki.config.json
crates/uzumaki/: Cargo.toml  README.md  build.rs  package.json
crates/uzumaki/cli/: main.ts
crates/uzumaki/core/: runtime.js
crates/uzumaki/js/: clipboard.ts  core.ts  dispatcher.ts  event-emitter.ts  event-target.ts  events.ts  index.ts  node.ts  window.ts
crates/uzumaki/js/elements/: base.ts  checkbox.ts  element.ts  image.ts  index.ts  input.ts
crates/uzumaki/js/react/: host.ts  reconciler.ts
crates/uzumaki/js/react/jsx/: types.ts
crates/uzumaki/src/: app.rs  element.rs  event_dispatch.rs  gpu.rs  headless.rs  input.rs  interactivity.rs  layout.rs  lib.rs  main.rs  prop_keys.rs  selection.rs  style.rs  text.rs  text_model.rs  ui.rs  window.rs
crates/uzumaki/src/element/: input.rs  render.rs  scroll.rs  selection.rs
crates/uzumaki/src/ops/: dom.rs  image.rs  style_util.rs  window.rs
crates/uzumaki/src/paint/: image.rs  render.rs  scroll.rs
crates/uzumaki/src/runtime/: hmr_watcher.rs  mod.rs  ts.rs
crates/uzumaki/src/standalone/: boot.rs  embed.rs  format.rs  mod.rs  pack.rs  vfs.rs
crates/uzumaki_core/: Cargo.toml
crates/uzumaki_core/js/: cli.ts  events.ts  index.ts
crates/uzumaki_core/js/react/: reconciler.ts  useInput.ts
crates/uzumaki_core/js/react/jsx/: runtime.ts
crates/uzumaki_core/src/: element.rs  event_dispatch.rs  input.rs  lib.rs  style.rs  text.rs  text_buffer.rs  text_model.rs  window.rs
docs/src/components/: Footer.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: how-it-works.md  react-runtime.md
docs/src/content/docs/guides/: building.md  configuration.md  events-state.md  installation.md  quick-start.md  resources.md  styling.md
docs/src/content/docs/reference/: cli.md  elements.md  events.md  paths.md  props.md  runtime-api.md  window.md
docs/src/styles/: custom.css
runtime/: Cargo.toml  fmt_errors.rs  tokio_util.rs  transpile.rs
scripts/: copy-artifacts.ts
